グループ招待仕様を簡素化
